# yourbase

./: BUILD.bazel  README.md  WORKSPACE  book.json  k8s.bzl
bazel/: BUILD.bazel  def.bzl  go.bzl  k8s.bzl  secrets.bzl
bazel/templates/: deployment.jsonnet  secrets.jsonnet
ci/: BUILD.bazel  README.md  check_status.sh  ci.sh  live_test.sh  main.go  test.sh
ci/tools/: live_test.sh
docs/design/: AppTypes.md  CIServer.md  CrazyIdeas.md  KubernetesControl.md  LoadBalancing.md  LoggingInfra.md  Operations.md  Phase1.md  Principles.md  ReleaseMe.md  Security.md  Tracing.md
docs/user-guide/: README.md  SUMMARY.md  beyond-the-monolith.md  deploying.md  developing-services.md  getting-started.md  how-does-it-work.md  operating.md  testing-services.md
examples/hellohttp/client/: BUILD.bazel  main.go
examples/hellohttp/server/: BUILD.bazel
examples/pypinger/client/: BUILD.bazel  pinger.py
examples/pypinger/server/: BUILD.bazel  pingserver.py  pingserver_test.py
helm/: elasticsearch.yaml  fluent-bit.yaml  kibana.yaml  run.sh
testing/: BUILD.bazel  http_test.sh  http_uniformity_test.go
