load(
    "@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl",
    "jsonnet_library",
)

jsonnet_library(
    name = "ksonnet-lib",
    srcs = [
        "@com_github_ksonnet_lib//:ksonnet_files",
    ],
    visibility = ["//visibility:public"],
)

exports_files(glob([
    "def.bzl",
    "deployment.jsonnet",
    "secrets.bzl",
]))
