load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:go.bzl", "go_http_server")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/yourbase/yourbase/ci",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_kelseyhightower_envconfig//:go_default_library",
        "@com_github_phayes_hookserve//hookserve:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing:go_default_library",
    ],
)

go_http_server(
    name = "ci_server",
    base = "@docker_bazel//image",
    enable_uniformity_testing = False,
    environment_access = {
        # optional
        "production": "public",  # everything else
        # is restricted
    },
    # app_config = ":helloworld_cfg"  # optional
    files = [
        ":ci.sh",
    ],
    library = ":go_default_library",
    secrets = ["github"],
)

go_binary(
    name = "ci",
    embed = [":go_default_library"],
    importpath = "github.com/yourbase/yourbase/ci",
    visibility = ["//visibility:public"],
)

exports_files([
    "ci.sh",
])
