load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//bazel:def.bzl", "go_http_server")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nictuku/microclusters/hellohttp/server",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    importpath = "github.com/nictuku/microclusters/hellohttp/server",
    visibility = ["//visibility:public"],
)

go_http_server(
    name = "go-hellohttp",
    environment_access = {
        # optional
        "production": "public",  # everything else
        # is restricted
    },
    library = ":go_default_library",  # go_binary
    # app_config = ":hellogrpc_cfg"  # optional
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/nictuku/microclusters/hellohttp/server",
)
